# asteroids-2.1

./: CMakeLists.txt
.devcontainer/: devcontainer.json
app/: main.cpp
cmake/: CompilerWarnings.cmake  Doxygen.cmake  all.cmake
include/communication/: asteroid-communication.h  shot-communication.h
include/engine/: asteroid.h  base-entity.h  engine.h  player.h  shot.h  user-commands.h
include/game/: game.h
include/graphical-interface/: animation.h  camera.h  explosion.h  graphical-asteroid.h  graphical-interface.h  graphical-player.h  graphical-shot.h  hud.h
source/: CMakeLists.txt  animation.cpp  asteroid.cpp  base-entity.cpp  camera.cpp  engine.cpp  explosion.cpp  game.cpp  graphical-asteroid.cpp  graphical-interface.cpp  graphical-player.cpp  graphical-shot.cpp  hud.cpp  player.cpp  shot.cpp
textures/: texturas_variadas.avif
